--- a/references.bib
+++ b/references.bib
@@ -184,3 +184,33 @@ and is in the range of 0.2 to 8 seconds for 16 to 128 trustees.},
 	month = feb,
 	year = {2019},
 }
+
+@inproceedings{zheng_overview_2017,
+	title = {An {Overview} of {Blockchain} {Technology}: {Architecture}, {Consensus}, and {Future} {Trends}},
+	shorttitle = {An {Overview} of {Blockchain} {Technology}},
+	doi = {10.1109/BigDataCongress.2017.85},
+	abstract = {Blockchain, the foundation of Bitcoin, has received extensive attentions recently. Blockchain serves as an immutable ledger which allows transactions take place in a decentralized manner. Blockchain-based applications are springing up, covering numerous fields including financial services, reputation system and Internet of Things (IoT), and so on. However, there are still many challenges of blockchain technology such as scalability and security problems waiting to be overcome. This paper presents a comprehensive overview on blockchain technology. We provide an overview of blockchain architechture firstly and compare some typical consensus algorithms used in different blockchains. Furthermore, technical challenges and recent advances are briefly listed. We also lay out possible future trends for blockchain.},
+	author = {Zheng, Zibin and Xie, Shaoan and Dai, Hong-Ning and Chen, Xiangping and Wang, Huaimin},
+	month = jun,
+	year = {2017},
+	file = {Full Text PDF:/home/lorenz/Zotero/storage/7BZSN7IH/Zheng et al. - 2017 - An Overview of Blockchain Technology Architecture.pdf:application/pdf},
+}
+
+@article{shamir_how_1979,
+	title = {How to share a secret},
+	volume = {22},
+	issn = {0001-0782},
+	url = {https://dl.acm.org/doi/10.1145/359168.359176},
+	doi = {10.1145/359168.359176},
+	abstract = {In this paper we show how to divide data D into n pieces in such a way that D is easily reconstructable from any k pieces, but even complete knowledge of k - 1 pieces reveals absolutely no information about D. This technique enables the construction of robust key management schemes for cryptographic systems that can function securely and reliably even when misfortunes destroy half the pieces and security breaches expose all but one of the remaining pieces.},
+	number = {11},
+	urldate = {2024-02-25},
+	journal = {Communications of the ACM},
+	author = {Shamir, Adi},
+	month = nov,
+	year = {1979},
+	keywords = {cryptography, interpolation, key management},
+	pages = {612--613},
+	file = {Full Text PDF:/home/lorenz/Zotero/storage/UHQ42MJL/Shamir - 1979 - How to share a secret.pdf:application/pdf},
+}
+
