--- a/references.bib
+++ b/references.bib
@@ -214,3 +214,30 @@ and is in the range of 0.2 to 8 seconds for 16 to 128 trustees.},
 	file = {Full Text PDF:/home/lorenz/Zotero/storage/UHQ42MJL/Shamir - 1979 - How to share a secret.pdf:application/pdf},
 }
 
+@misc{fu_key_2005,
+	title = {Key {Regression}: {Enabling} {Efficient} {Key} {Distribution} for {Secure} {Distributed} {Storage}},
+	shorttitle = {Key {Regression}},
+	url = {https://eprint.iacr.org/2005/303},
+	abstract = {The Plutus file system introduced the notion of key rotation as
+a means to derive a sequence of temporally-related keys from the most
+recent key. In this paper we show that, despite natural intuition to
+the contrary, key rotation schemes cannot generically be used to key
+other cryptographic objects; in fact, keying an encryption scheme with
+the output of a key rotation scheme can yield a composite system that
+is insecure. To address these shortcomings, we introduce a new
+cryptographic object called a key regression scheme, and we
+propose three constructions that are provably secure under standard
+cryptographic assumptions. We implement key regression in a secure
+file system and empirically show that key regression can significantly
+reduce the bandwidth requirements of a content publisher under
+realistic workloads using lazy revocation. Our experiments also serve
+as the first empirical evaluation of either a key rotation or key
+regression scheme.},
+	urldate = {2024-02-25},
+	author = {Fu, Kevin and Kamara, Seny and Kohno, Tadayoshi},
+	year = {2005},
+	note = {Publication info: Published elsewhere. An extended abstract of this paper appears in ISOC Network and Distributed System Security Symposium (NDSS), February 2006. This is the full version.},
+	keywords = {content distribution network, hash chain, key distribution, Key regression, key rotation, lazy revocation, security proofs.},
+	file = {Full Text PDF:/home/lorenz/Zotero/storage/QIJTHRJ5/Fu et al. - 2005 - Key Regression Enabling Efficient Key Distributio.pdf:application/pdf},
+}
+
